# pfc-rust-api

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/api/: animal.rs  association.rs  auth.rs  demande.rs  espece.rs  famille.rs  media.rs  mod.rs  tag.rs  utilisateur.rs
src/auth/: error_handler.rs  jwt.rs  mod.rs  password.rs
src/config/: app_config.rs  mod.rs
src/database/models/: animal.rs  animal_tag.rs  association.rs  demande.rs  espece.rs  famille.rs  media.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  tag.rs  utilisateur.rs
src/database/repositories/: animal_repository.rs  animal_tag_repository.rs  association_repository.rs  demande_repository.rs  espece_repository.rs  famille_repository.rs  media_repository.rs  mod.rs  tag_repository.rs  utilisateur_repository.rs
src/middleware/: auth_middleware.rs  mod.rs  role_middleware.rs
src/validators/: common_validators.rs
