[package]
name = "pfc-rust-api"
publish = false
rust-version = "1.92.0"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bcrypt = "0.17"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.7"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
log = "0.4.27"
once_cell = "1.21.1"
regex = "1.11.1"
sea-orm = { version = "2.0.0-rc.27", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }